[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://scripts/Run.gd" type="Script" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://scripts/Idle.gd" type="Script" id=4]
[ext_resource path="res://assets/player/player.png" type="Texture" id=5]
[ext_resource path="res://scripts/on_plataform.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 2 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "move_leftright"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 0, 5, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "move_updown"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2, 0 ]
}

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["Player"]]
z_index = 1
collision_mask = 1792

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 7

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="OnPlatform" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Tween" type="Tween" parent="."]

[node name="RayCastTop" type="RayCast2D" parent="."]
position = Vector2( 0, -9 )
enabled = true
cast_to = Vector2( 0, -6 )
collision_mask = 1536
collide_with_areas = true

[node name="RayCastBot" type="RayCast2D" parent="."]
position = Vector2( 0, 9 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 1536
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/move_leftright = SubResource( 6 )
anims/move_updown = SubResource( 5 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_completed" from="Tween" to="StateMachine/Idle" method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="Tween" to="StateMachine/Idle" method="_on_Tween_tween_started"]
